NEL: Destroy before Reporting to avoid reentrancy and crash

Right now, the ReportingService is manually destroyed in
~ContainerURLRequestContext, which can generate network errors that NEL
will then try to report using the half-destroyed ReportingService.

Fix this improper destruction order by first tearing down NEL manually
as well.

(This will be tested in a later end-to-end test, which will more easily
have the resources to exercise Reporting and NEL.)

Bug: 792978
Change-Id: I00822bf64db5e2033c71da33b8a572b693c37acf
Reviewed-on: https://chromium-review.googlesource.com/814840
Reviewed-by: Miriam Gershenson <mgersh@chromium.org>
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522865}
Former-commit-id: 65eb67f2a1809170456d58bb0a77feb991ec6fd5